--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ html, body, #mapDiv {
     padding: 0px
 }
 </style>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxitB5jQcw7weQdg9MqBRfxr6mj81wT7I&libraries=geometry" type="text/javascript"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=myKey&libraries=geometry" type="text/javascript"></script>
 <script type="text/javascript">
 //<![CDATA[
 var map;
